--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@ $("#button").click(function () {
 body {
   font-family: 'Inter', sans-serif;
   background-color:#121212;
+    margin:0;
+}
+
+html {
+  font-family: 'Inter', sans-serif;
+  background-color:#121212;
+  margin:0;
 }
 
 h1 {
