--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@ h1 {
 
 <div id="button">
   link
-  <a class="button-link" href="http://www.google.com">a</a>
-  <a class="button-link" href="http://www.yahoo.com">b</a>
-  <a class="button-link" href="http://www.bing.com">c</a>
+  <a class="button-link" href="https://forms.gle/gMRvdYETbeDqc2wo9">a</a>
+  <a class="button-link" href="https://forms.gle/uBbktGyjonS18g246">b</a>
 </div>
 <div class=subtitle1>
 <h1>Kliknij powyższy przycisk aby przejść do ankiety.</h1>
