--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"> 
-
+<script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 
 <style>
