--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ h1 {
 <div class=subtitle1>
 <h1>Kliknij powyższy przycisk aby przejść do ankiety.</h1>
 <p>
-Zostanież przegierowany na stronę Google Forms, gdzie możesz przesłać swoją odpowiedź.
+Zostanież przegierowany na stronę Google Forms, gdzie możesz przesłać swoją odpowiedź. Ankieta może zostać wypełniona tylko raz. Dziękujemy <3
 </p>
 </div>
   
