--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 
     <div id="button">
       link
-      <a class="button-link" href="https://forms.gle/gMRvdYETbeDqc2wo9">a</a>
-      <a class="button-link" href="https://forms.gle/uBbktGyjonS18g246">b</a>
+      <a class="button-link" href="https://forms.gle/DrffwYg8nzkg9WMc6">a</a>
+      <a class="button-link" href="https://forms.gle/8YymCvCjVxiVNY5t7">b</a>
     </div>
 
     <div class="subtitlewrap">
