--- a/index.html
+++ b/index.html
@@ -68,37 +68,39 @@
     @media only screen and (max-width: 1000px) {
 
       h1 {
-        font-size: 42px;
+        font-size: 64px;
         line-height: initial;
         padding-top: 30px;
       }
 
       #button {
-        width: calc(100% - 40px);
-        height: 100px;
-        font-size: 42px;
-        line-height: 96px;
+        width: calc(100% - 160px);
+        height: 220px;
+        font-size: 64px;
+        line-height: 220px;
+        margin-top: 80px;
       }
 
       .subtitlewrap {
-        width: calc(100% - 40px);
+        width: calc(100% - 160px);
         padding: 0;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 80px;
       }
 
       .subtitle1 {
         margin-left: auto;
         margin-right: auto;
         padding: 0px 40px 0px 40px;
-        font-size: 26px;
+        font-size: 62px;
       }
 
       .subtitle2 {
         margin-left: auto;
         margin-right: auto;
         padding: 0px 40px 40px 40px;
-        font-size: 22px;
+        font-size: 32px;
       }
     }
 
