--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h1>Kliknij powyższy przycisk aby przejść do ankiety.</h1>
       </div>
       <div class=subtitle2>
-        Zostanież przegierowany na stronę Google Forms, gdzie możesz przesłać swoją odpowiedź. Ankieta może zostać wypełniona tylko raz. Dziękujemy. ❤️
+        Nastąpi przekierowanie na stronę Google Forms, gdzie możesz przesłać swoją odpowiedź. Ankieta może zostać wypełniona tylko raz. Dziękujemy. ❤️
       </div>
 
     </div>
