--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         <h1>Kliknij powyższy przycisk aby przejść do ankiety.</h1>
       </div>
       <div class=subtitle2>
-        Nastąpi przekierowanie na stronę Google Forms, gdzie możesz przesłać swoją odpowiedź. Ankieta może zostać wypełniona tylko raz. Dziękujemy. ❤️
+        <p>Nastąpi przekierowanie na stronę Google Forms, gdzie możesz przesłać swoją odpowiedź. Ankieta może zostać wypełniona tylko raz.</p>
+        <p>Na pierwszej stronie znajduje się instrukcja i opis badania, prosimy o uważne przeczytanie.</p>
+        <p>Dziękujemy.</p>
       </div>
 
     </div>
